Implementation of category fields output

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -1315,6 +1315,11 @@ body.modal-open {
 	margin-right: 5px;
 }
 
+// Category Fields
+// ----------------------------------------
+.spCategoryFields {
+}
+
 // Views/DV
 // ----------------------------------------
 .SobiPro .spCategoryContainer,
