--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -1125,6 +1125,11 @@
 	margin-right: 5px;
 }
 
+// Category Fields
+// ----------------------------------------
+.spCategoryFields {
+}
+
 // Views/DV
 // ----------------------------------------
 .SobiPro .spCategoryContainer,
