(-) SobiPro template theme 'blackwidow' removed 	(+) Colour styles for Gallery field added

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2329,6 +2329,17 @@ body.modal-open {
 	font-size: calc(@fontsize + 3px);
 }
 
+// Gallery Field
+// -----------------------------------------------
+.SobiPro .spGalleryDropArea div.table .file-row {
+	.background(light);
+}
+.SobiPro .spGalleryDropArea,
+.SobiPro .spGalleryDropArea div.table .file-row > div {
+	.borders(light);
+}
+
+
 // Profile Field
 // -----------------------------------------------
 .SobiPro .spProfile.striped > blockquote:nth-child(2n+1) {
