--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -2001,6 +2001,16 @@
 	font-size: calc(@fontsize + 3px);
 }
 
+// Gallery Field
+// -----------------------------------------------
+.SobiPro .spGalleryDropArea div.table .file-row {
+	.background(light);
+}
+.SobiPro .spGalleryDropArea,
+.SobiPro .spGalleryDropArea div.table .file-row > div {
+	.borders(light);
+}
+
 // Profile Field
 // -----------------------------------------------
 .SobiPro .spProfile.striped > blockquote:nth-child(2n+1) {
