Gallery Field styles added

--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -2338,6 +2338,11 @@ body.modal-open {
 .SobiPro .spGalleryDropArea div.table .file-row > div {
 	.borders(light);
 }
+.SobiPro .pswp__share-tooltip a:hover {
+	color: @hover-color;
+	background-color: @active-color;
+}
+
 
 
 // Profile Field
