--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -2010,6 +2010,12 @@
 .SobiPro .spGalleryDropArea div.table .file-row > div {
 	.borders(light);
 }
+.SobiPro .pswp__share-tooltip a:hover {
+	color: @hover-color;
+	background-color: @active-color;
+}
+
+
 
 // Profile Field
 // -----------------------------------------------
