parent category edit button

--- a/Site/media/less/adm/sobipro.less
+++ b/Site/media/less/adm/sobipro.less
@@ -950,7 +950,22 @@ input[type='radio'] {
 }
 
 .SobiPro .spStatusIssues {
-	float: right;
+	text-align: right;
+	margin-bottom: 0;
+
+	a {
+		background-color: #faa732;
+		border-color: #faa732;
+		background-image: none;
+		color: white;
+		text-shadow: unset;
+		box-shadow: unset;
+		border-radius: unset;
+	}
+	a:hover {
+		background-color: #f89406;
+		border-color: #f89406;
+	}
 }
 
 .SobiPro .spStatusHeader {
@@ -1062,6 +1077,12 @@ input[type='radio'] {
 			padding-left: 15px;
 			padding-bottom: 5px;
 		}
+	}
+
+	.spBox:hover,
+	.spBox:focus {
+		background-color: #92d0f2;
+		border-color: #92d0f2;
 	}
 }
 
