--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -332,28 +332,28 @@
 	}
 	// general distances on top and bottom
 	.distance-top-xs {
-		margin-top: 5px;
+		margin-top: 12px;
 	}
 	.distance-top-sm {
-		margin-top: 10px;
+		margin-top: 18px;
 	}
 	.distance-top-md {
-		margin-top: 20px;
+		margin-top: 28px;
 	}
 	.distance-top-lg {
-		margin-top: 30px;
+		margin-top: 40px;
 	}
 	.distance-bottom-xs {
-		margin-bottom: 5px;
+		margin-bottom: 12px;
 	}
 	.distance-bottom-sm {
-		margin-bottom: 10px;
+		margin-bottom: 18px;
 	}
 	.distance-bottom-md {
-		margin-bottom: 20px;
+		margin-bottom: 28px;
 	}
 	.distance-bottom-lg {
-		margin-bottom: 30px;
+		margin-bottom: 40px;
 	}
 }
 
@@ -514,6 +514,16 @@
 
 // Modal windows
 // -----------------------------------------
+.SobiPro div.modal {
+	margin-left: 0;
+	top: 5%;
+	left: 0;
+	width: 100%;
+	background-color: transparent;
+	border: none;
+	box-shadow: none;
+}
+
 .SobiPro .modal-header h3 {
 	.headertext;
 }
@@ -1867,16 +1877,20 @@ body.modal-open {
 }
 
 // Range inputs
+.SobiPro .spSelectRangeFrom select,
+.SobiPro .spSelectRangeTo select,
 .SobiPro .spSelectRangeFrom .input-group,
 .SobiPro .spSelectRangeTo .input-group {
 	float: left;
 	width: calc(100% / 2 - 5px);
 }
 
+.SobiPro .spSelectRangeFrom select,
 .SobiPro .spSelectRangeFrom .input-group {
 	margin: 0 5px 10px 0;
 }
 
+.SobiPro .spSelectRangeTo select,
 .SobiPro .spSelectRangeTo .input-group {
 	margin: 0 0 10px 5px;
 }
