--- a/Site/media/css/adm/tree.css
+++ b/Site/media/css/adm/tree.css
@@ -1,5 +1,4 @@
 /**
- * @version: $Id$
  * @package: SobiPro Component for Joomla!
 
  * @author
@@ -7,7 +6,7 @@
  * Email: sobi[at]sigsiu.net
  * Url: http://www.Sigsiu.NET
 
- * @copyright Copyright (C) 2006 - 2015 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @copyright Copyright (C) 2006 - 2016 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
  * @license GNU/GPL Version 3
  * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
  * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
@@ -15,11 +14,6 @@
 
  * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
- * $Date$
- * $Revision$
- * $Author$
- * $HeadURL$
  */
 
 /* Styles for SigsiuTree on Backend */
@@ -31,7 +25,7 @@
 	overflow: auto;
     margin-left: -4px;
     margin-right: -7px;
-    line-height: 17px;
+    line-height: 15px;
     max-height: 650px;
 }
 .AdminEntry .sigsiuTree {
@@ -42,10 +36,14 @@
 }
 
 .sigsiuTree img {
-	border: 0px;
+	border: 0;
 	vertical-align: middle;
 	float: none!important;
 	margin: 0;
+}
+
+.sigsiuTree a {
+	padding: 0;
 }
 
 .sigsiuTree a.node,
