--- a/Site/usr/templates/b3-default3/css/theme.less
+++ b/Site/usr/templates/b3-default3/css/theme.less
@@ -667,17 +667,23 @@ body.modal-open {
 
 	// Pagination
 	// -----------------------------------------------
+	.pagination > ul > li > a,
+	.pagination > ul > li > span,
 	.pagination > li > a,
 	.pagination > li > span {
 		border-color: @base-color;
 		border-width: 1px;
 		margin: 1px;
 	}
+	.pagination > ul > li > a,
 	.pagination > li > a {
 		color: @text-color;
 		background-color: @base-color;
 		font-weight: bold;
 	}
+	.pagination > ul > li > a.active,
+	.pagination > ul > li > a:hover,
+	.pagination > ul > li > a:focus,
 	.pagination > li > a.active,
 	.pagination > li > a:hover,
 	.pagination > li > a:focus,
@@ -686,8 +692,13 @@ body.modal-open {
 		color: @hover-color;
 		background-color: @active-color;
 		border-color: @active-color;
+		text-decoration: none;
 	}
 	.well,
+	.pagination ul > .disabled > span,
+	.pagination ul > .disabled > a,
+	.pagination ul > .disabled > a:hover,
+	.pagination ul > .disabled > a:focus
 	.pagination > .disabled > span,
 	.pagination > .disabled > a,
 	.pagination > .disabled > a:hover,
